[package]
name = "issuer-node"
version = "0.1.0"
edition = "2024"

[dependencies]
poseidon-rs = "0.0.8"
ff_ce = "0.11"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postgres = "0.19"
chrono = "0.4"
dotenvy = "0.15"